[tool.poetry]
name = "cost-accounting"
version = "0.1.0"
description = ""
authors = ["Ilya Pestov <skinlinkg01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^21.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
